@@ -1,3 +1,9 @@
+2010-05-14  Jakub Jelinek  <jakub@redhat.com>
+
+	PR debug/44136
+	* cfgexpand.c (expand_debug_expr): If non-memory op0
+	has BLKmode, return NULL.
+
 2010-05-13  Jakub Jelinek  <jakub@redhat.com>
 
 	PR debug/44104
